--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
 			<h1>Welcome to AcronymCon!</h1>
 			<ul>
 				<li v-for="person in people">
-					<h3>{{ person.name }}, {{person.email}}</h3>
+					<h3>{{ person.name }}</h3>
+					<p>{{person.since}} minute <span v-if="person.since != 1">s</span> ago</p>
 				</li>
 			</ul>
 			<h2>Check in</h2>
-			<input v-model="enteredEmail" placeholder="email"><p>{{enteredEmail}}</p>
-			<input v-model="enteredName" placeholder="name"><p>{{enteredName}}</p>
+			<input v-model="enteredName" placeholder="name" @keyup.enter="$event.target.nextElementSibling.focus()">
+			<input v-model="enteredEmail" placeholder="email" @keyup.enter="$event.target.nextElementSibling.focus()" >
+			<button type="submit" v-on:keyup.enter="submitPerson">Submit</button>
 		</div>
 		
 		<script src="https://cdn.jsdelivr.net/npm/vue"></script>
