--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 			<h1>Welcome to AcronymCon!</h1>
 			<ul>
 				<li v-for="person in people">
+					<img v-bind:src="'https://www.gravatar.com/avatar/' + md5(person.hashedemail) " alt="">
 					<h3>{{ person.name }}</h3>
 					<p>{{person.since}} minute <span v-if="person.since != 1">s</span> ago</p>
 				</li>
@@ -26,6 +27,8 @@
 		</div>
 		
 		<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-md5/2.10.0/js/md5.js"></script>
+		<script src="node_modules/blueimp-md5/js/md5.js" ></script>
 		<script src="dist/js/app.js"></script>
 
 	</body>
